Explanation text. Grayscale the page for now while I ensure that nothing relies too much on color.

--- a/server/src/main/resources/public/styles.css
+++ b/server/src/main/resources/public/styles.css
@@ -1,3 +1,10 @@
+html {
+     -webkit-filter: grayscale(100%); 
+     filter: grayscale(100%); 
+    background-color: var(--color-white);
+    text-align: center;
+    height: 100%;
+}
 /* ============================================
    Loading Screen
    ============================================ */
